--- a/MyCProgram/HTML/JQuery/1.html
+++ b/MyCProgram/HTML/JQuery/1.html
@@ -11,6 +11,7 @@
 
         $("#input1").click(function(event) {
             /* Act on the event */
+            
             $.ajax({
                 type: "POST",
                 url: "http://172.16.160.9:8999/CMApi/api/Entity/SaveObjectInfo?usertoken=i0l7/w8fa8MFfYxyO7GadPArh1s=",
@@ -34,6 +35,10 @@
                 }
             });
         });
+
+        $("#input2").click(function(event){
+          
+        })
 
         $("#input2").click(function(event) {
             /* Act on the event */
