--- a/MyCProgram/HTML/JQuery/7.html
+++ b/MyCProgram/HTML/JQuery/7.html
@@ -22,7 +22,7 @@
             //var conf = $.fn.getConfig();
                $.ajax({
                 type: "GET",
-                url: "http://172.16.168.202:9033/webopen",
+                url: "http://172.16.168.205:9033/webopen",
                 data: null,
                 dataType: "json",
                 contentType: "application/json",
@@ -56,6 +56,7 @@
 </head>
 
 <body>
+<a href="1.html">this is a link</a>
     <div id="info" />
     <br />
     <input type="submit" id="clickme" width="200px" />
