--- a/MyCProgram/HTML/JQuery/6.html
+++ b/MyCProgram/HTML/JQuery/6.html
@@ -4,8 +4,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src="jquery-1.11.3.js"></script>
-    <script src="user.js"></script>   
-    <script src="golbalSettings.js"></script> 
+    <script src="user.js"></script>
+    <script src="golbalSettings.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="test1.css">-->
     <!--<script src="http://172.16.134.228:9020/js/plugins/jquery.getconfig.js"></script>-->
     <script type="text/javascript">
     $(document).ready(function() {
@@ -16,7 +17,7 @@
             //log("click me!!!!");
             //var user = getUserNameByUserCode("e29cf642e8d046d3846ecc5bd3ccb3bf","a3cfda0cdba2148f0f7aece8b73ad5a9");
             //log("e29cf642e8d046d3846ecc5bd3ccb3bf : " +  user)
-            
+
             //var user1 = getUserNameByUserCode("c5286ede2f7c4a2c8c8507bae2f9f02e","a3cfda0cdba2148f0f7aece8b73ad5a9");
             //log("c5286ede2f7c4a2c8c8507bae2f9f02e : " + user1);
 
@@ -26,23 +27,35 @@
 
         });
 
+        loadjscssfile("test1.css","css");
+        loadjscssfile("callfrom.js","js");
+
+        /*
+        $.getScript('callfrom.js', function() {
+           log("after called...");
+        });
+        */
+
         log("<br />start...");
 
-
-
         log("end...");
-
 
         function log(msg) {
             $("#info").append(msg + "</br>");
         }
 
     });
+
+    window.onload = function () {
+         //loadjscssfile("test1.css","css");
+        
+    }
     </script>
 </head>
 
 <body>
     <div id="info" />
+    <div id="clicktest">dddd</div>
     <br />
     <input type="submit" id="clickme" width="200px" />
 </body>
