--- a/MyCProgram/HTML/JQuery/4.html
+++ b/MyCProgram/HTML/JQuery/4.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="http://localhost:9999/1.css" />
     <script src="jquery-1.11.3.js"></script>
+    <script src="jquery.cookie"></script>
+    
     <script type="text/javascript">
     $(document).ready(function() {
         //直接把这个源文件纯属DIV链接过来，可以直接嵌入到本页面
