--- a/MyCProgram/HTML/JQuery/9.html
+++ b/MyCProgram/HTML/JQuery/9.html
@@ -9,7 +9,16 @@
     $(document).ready(function() {
 
         //alert("hello");
-        $.cookie('the_cookie', 'the_value'); 
+        //$.cookie('the_cookie', 'the_value'); 
+        var num = 101;
+        var num1 = num>100?0:num;
+
+
+        console.log(num1);
+
+        var x = 1/3;
+        console.log(x);
+
 
 
     });
