--- a/MyCProgram/HTML/JQuery/SomeSite/1.html
+++ b/MyCProgram/HTML/JQuery/SomeSite/1.html
@@ -1,1 +1,2 @@
-<div id="div123">bbbbbbbbbbbbbbbbbbbb</div>
+<embed id="pdffile" width="100%" height="680" src="E:\台式机备份\值得学习\编码的奥秘\001.PDF" type="application/pdf" />
+
