--- a/MyCProgram/HTML/NodeJs/miaosha/index2.html
+++ b/MyCProgram/HTML/NodeJs/miaosha/index2.html
@@ -4,78 +4,18 @@
 <head>
     <title></title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <script src="vue.js"></script>
     <script src="./data/data.js?t=1"></script>
-    <style type="text/css" media="screen">
-    body {
-        font-family: Helvetica Neue, Arial, sans-serif;
-        font-size: 14px;
-        color: #444;
-    }
-
-    table {
-        border: 2px solid #42b983;
-        border-radius: 3px;
-        background-color: #fff;
-    }
-
-    th {
-        background-color: #42b983;
-        color: rgba(255, 255, 255, 0.66);
-        cursor: pointer;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-    }
-
-    td {
-        background-color: #f9f9f9;
-    }
-
-    th,
-    td {
-        min-width: 120px;
-        padding: 10px 20px;
-    }
-
-    th.active {
-        color: #fff;
-    }
-
-    th.active .arrow {
-        opacity: 1;
-    }
-
-    .arrow {
-        display: inline-block;
-        vertical-align: middle;
-        width: 0;
-        height: 0;
-        margin-left: 5px;
-        opacity: 0.66;
-    }
-
-    .arrow.asc {
-        border-left: 4px solid transparent;
-        border-right: 4px solid transparent;
-        border-bottom: 4px solid #fff;
-    }
-
-    .arrow.dsc {
-        border-left: 4px solid transparent;
-        border-right: 4px solid transparent;
-        border-top: 4px solid #fff;
-    }
-    </style>
+    <script src="./data/extentinfo.js?t=1"></script>
+    <script src="vue.js"></script>
+    <link rel="stylesheet" href="base.css" type="text/css" />
 </head>
 
 <body>
     <!-- component template -->
     <script type="text/x-template" id="grid-template">
-        <table>
+        <table style="clear: both;">
             <thead>
-                <tr>
+                <tr id="header">
                     <th v-for="key in columns" @click="sortBy(key)" :class="{ active: sortKey == key }">
                         {{ key | changeHeader }}
                         <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'">
@@ -86,9 +26,10 @@
             <tbody>
                 <tr v-for="entry in filteredData">
                     <td v-for="key in columns">
+                        <div v-if="displayLink(key)" style="font-size: 20px"> <a :href="'https://search.jd.com/Search?enc=utf-8&keyword='+entry[key]" target="_blank">{{entry[key]}}</a> </div>
                         <div v-if="displayInDiv(key)" style="font-size: 20px">{{entry[key] }}</div>
                         <div v-if="displayForRemianTime(key)" style="font-size: 20px">{{(entry[key]/60/60).toFixed(0) }} 小时后</div>
-                        <div v-if="displayImage(key)"><img width="180px" height="180px" v-bind:src=entry[key] /></div>
+                        <div v-if="displayImage(key)" width="200px" height="200px"><img width="160px" height="160px" v-bind:src=entry[key] /></div>
                     </td>
                 </tr>
             </tbody>
@@ -97,124 +38,19 @@
     <!-- demo root element -->
     <div id="demo">
         <form id="search">
-            Search
-            <input name="query" v-model="searchQuery">
+            <div style="float: right;font-size: 40px;font-weight: bold">
+                记录条数:&nbsp;&nbsp;{{goods.length}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 更新时间:&nbsp;&nbsp;&nbsp;&nbsp;{{extentinfo.lastUpdateTime}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input name="query" v-model="searchQuery" width="200px" height="60px" style="font-size: 40px"> <b style="font-size: 40px">Search</b>
+            </div>
+            <div style="clear:both" />
+            <br />
+            <hr style="border-width: 2px ;border-color: red" />
+            <br />
         </form>
         <demo-grid :data="gridData" :columns="gridColumns" :filter-key="searchQuery">
         </demo-grid>
+        <script src="base.js"></script>
     </div>
-    <script>
-    // register the grid component
-    Vue.component('demo-grid', {
-                template: '#grid-template',
-                props: {
-                    data: Array,
-                    columns: Array,
-                    filterKey: String
-                },
-                data: function() {
-                    var sortOrders = {}
-                    this.columns.forEach(function(key) {
-                        sortOrders[key] = 1
-                    })
-                    return {
-                        sortKey: '',
-                        sortOrders: sortOrders
-                    }
-                },
-                computed: {
-                    filteredData: function() {
-                        var sortKey = this.sortKey
-                        var filterKey = this.filterKey && this.filterKey.toLowerCase()
-                        var order = this.sortOrders[sortKey] || 1
-                        var data = this.data
-                        if (filterKey) {
-                            data = data.filter(function(row) {
-                                return Object.keys(row).some(function(key) {
-                                    return String(row[key]).toLowerCase().indexOf(filterKey) > -1
-                                })
-                            })
-                        }
-                        if (sortKey) {
-                            data = data.slice().sort(function(a, b) {
-                                a = a[sortKey]
-                                b = b[sortKey]
-                                return (a === b ? 0 : a > b ? 1 : -1) * order
-                            })
-                        }
-                        return data
-                    }
-                },
-                filters: {
-                    capitalize: function(str) {
-                        return str.charAt(0).toUpperCase() + str.slice(1)
-                    },
-                    changeHeader: function(str) {
-                      
-
-                        if (str == "imageurl") {
-                            return "图片";
-                        } else if (str == "jdPrice") {
-                                return "京东价格";
-                            } else if (str == "miaoShaPrice") {
-                                return "秒杀价格";
-                            } else if (str == "discount") {
-                                return "降价";
-                            } else if (str == "rate") {
-                                return "折扣";
-                            } else if (str == "startTimeShow") {
-                                return "开始时间";
-                            } else if (str == "endRemainTime") {
-                                return "线束时间";
-                            } else if (str == "soldRate") {
-                                return "卖出比例";
-                            } else if (str == "wname") {
-                                return "名字";
-                            }
-
-                        }
-                    },
-                    methods: {
-                        sortBy: function(key) {
-                            this.sortKey = key
-                            this.sortOrders[key] = this.sortOrders[key] * -1
-                        },
-                        displayInDiv: function(key) {
-                            return key != "imageurl" && key != "endRemainTime";
-                        },
-                        displayForRemianTime: function(key) {
-                            return key == "endRemainTime";
-                        },
-                        displayImage: function(key) {
-                            return key == "imageurl";
-                        }
-                    }
-                })
-
-            // bootstrap the demo
-            /*
-            var demo = new Vue({
-                el: '#demo',
-                data: {
-                    searchQuery: '',
-                    gridColumns: ['name', 'power'],
-                    gridData: [
-                        { name: 'Chuck Norris', power: Infinity },
-                        { name: 'Bruce Lee', power: 9000 },
-                        { name: 'Jackie Chan', power: 7000 },
-                        { name: 'Jet Li', power: 8000 }
-                    ]
-                }
-            })*/
-            var demo = new Vue({
-                el: '#demo',
-                data: {
-                    searchQuery: '',
-                    gridColumns: ['imageurl', 'jdPrice', 'miaoShaPrice', 'discount', 'rate', 'startTimeShow', 'endRemainTime', 'soldRate', 'wname'],
-                    gridData: goods
-                }
-            })
-    </script>
 </body>
 
 </html>
