--- a/MyCProgram/HTML/NodeJs/miaosha/index2.html
+++ b/MyCProgram/HTML/NodeJs/miaosha/index2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>超级秒杀</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <script src="./data/data.js?t=1"></script>
     <script src="./data/extentinfo.js?t=1"></script>
