--- a/MyCProgram/HTML/JQuery/10.html
+++ b/MyCProgram/HTML/JQuery/10.html
@@ -3,36 +3,40 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script src="jquery-1.11.3.js"></script>  
+    <script src="jquery-1.11.3.js"></script>
     <script type="text/javascript">
+    $(document).ready(function() {
+        function showhell() {
 
-    $(document).ready(function() 
-    {     
-    	function showhell()
-    	{
-    		alert("hello...");
-    	}
+            console.log("hello...");
+
+            chid = $("<div id='id1'><input type='text' id='txt1'></input></div>");
+          
+
+            $("#“contains”").append(chid);
+
+            $("p").append("<b>Hello</b>"); 
+        }
+        showhell();
 
     });
 
-    $(document).ready(function() 
-    {     
-    	showhello();
+    $(document).ready(function() {
+        showhello();
 
     });
 
-    function showhello()
-    {
-		alert("this is from javsacript");    	
+    function showhello() {
+        console.log("this is from javsacript");
     }
-
-
     </script>
 </head>
 
 <body>
-<iframe src="iframe.html"></iframe>
-  
+    <p>I would like to say: </p> 
+    <div id=“contains”>ada</div>
+    <!--<iframe src="iframe.html"></iframe>
+            -->
 </body>
 
 </html>
