--- a/MyCProgram/HTML/NodeJs/jijing/index.html
+++ b/MyCProgram/HTML/NodeJs/jijing/index.html
@@ -2,127 +2,187 @@
 <html>
 
 <head>
-    <title>超级秒杀</title>
+    <title>基金专业分析</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-    <!--
-         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-
-    <script src="http://xhu218.s3.91sc.top/data/data.js?t=2222"></script>
-    <script src="http://xhu218.s3.91sc.top/data/extentinfo.js?t=1"></script>
--->
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/vue/1.0.14/vue.js"></script>
     <link rel="stylesheet" href="http://xhu218.s3.91sc.top/base.css" type="text/css" />
-    <!--
-    <script src="data/data.js?t=1"></script>
-    <script src="data/extentinfo.js?t=1"></script>
-    <script src="jquery.min.js"></script>
-    <script src="vue.js"></script>
-    <link rel="stylesheet" href="base.css" type="text/css" />   
-
-
--->
 </head>
 
 <body>
     <!-- component template -->
-    <script type="text/x-template" id="grid-template">
-        <table style="clear: both;">
-            <thead>
-                <tr id="header">
-                    <th v-for="key in columns" @click="sortBy(key)" :class="{ active: sortKey == key }">
-                        {{ key | changeHeader }}
-                        <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'">
+    <div width=100%>
+        <script type="text/x-template" id="grid-template">
+            <table style="clear: both;">
+                <thead>
+                    <tr id="header">
+                        <th v-for="key in columns" @click="sortBy(key)" :class="{ active: sortKey == key }">
+                            {{ key | changeHeader }}
+                            <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'">
           </span>
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr v-for="entry in filteredData">
-                    <td v-for="key in columns">
-                        <div v-if="displayLink(key)" style="font-size: 20px"> <a :href="'http://91sc.top?email=web@web.com&url=https://item.jd.com/'+entry['wareId']+'.html'" target="_blank">{{entry['wname']}}</a> </div>
-                        <div v-if="displayInDiv(key)" style="font-size: 20px">{{entry[key] }}</div>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="entry in filteredData">
+                        <td v-for="key in columns">
+                            <div v-if="displayInDiv(key)">{{entry[key] }}</div>
+                            <div v-if="displayInNum(key)">{{ entry[key]}}</div>
+                            <!--
+                           
                         <div v-if="displayForRemianTime(key)" style="font-size: 20px">{{(entry[key]/60/60).toFixed(0) }} 小时后</div>
                         <div v-if="displayImage(key)" width="200px" height="200px"><img width="160px" height="160px" v-bind:src=entry[key] /></div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </script>
-    <!-- demo root element -->
-    <div id="demo">
-        <form id="search">
-            <div style="float: right;font-size: 40px;font-weight: bold">
-                记录条数:&nbsp;&nbsp;
+                         <div v-if="displayLink(key)" style="font-size: 20px"> <a :href="'http://91sc.top?email=web@web.com&url=https://item.jd.com/'+entry['wareId']+'.html'" target="_blank">{{entry['wname']}}</a> </div>
+                     -->
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </script>
+        <div>
+            <!-- demo root element -->
+            <div id="demo">
+                <form id="search">
+                    <div style="float: right;font-size: 40px;font-weight: bold">
+                        <!-- 记录条数:&nbsp;&nbsp;
                 <span id="counter"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 更新时间:&nbsp;&nbsp;&nbsp;&nbsp;
-                <span id="updatetime"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <input name="query" v-model="searchQuery" width="200px" height="60px" style="font-size: 40px"> <b style="font-size: 40px">Search</b>
+                <span id="updatetime"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
+                        <br />
+                        <input name="query" v-model="searchQuery" width="200px" height="60px" style="font-size: 40px">
+                        <b style="font-size: 40px">Search</b>
+                    </div>
+                    <div style="clear:both" />
+                    <hr style="border-width: 2px ;border-color: red" />
+                </form>
+                <demo-grid :data="gridData" :columns="gridColumns" :filter-key="searchQuery">
+                </demo-grid>
             </div>
-            <div style="clear:both" />
-            <br />
-            <hr style="border-width: 2px ;border-color: red" />
-            <br />
-        </form>
-        <demo-grid :data="gridData" :columns="gridColumns" :filter-key="searchQuery">
-        </demo-grid>
-    </div>
-    <script>
-    function loadScript(url, callback) {
-        var script = document.createElement("script");
-        script.type = "text/javascript";
-        if (typeof(callback) != "undefined") {
-            if (script.readyState) {
-                script.onreadystatechange = function() {
-                    if (script.readyState == "loaded" || script.readyState == "complete") {
-                        script.onreadystatechange = null;
-                        callback();
+            <script>
+            function loadScript(url, callback) {
+                var script = document.createElement("script");
+                script.type = "text/javascript";
+                if (typeof(callback) != "undefined") {
+                    if (script.readyState) {
+                        script.onreadystatechange = function() {
+                            if (script.readyState == "loaded" || script.readyState == "complete") {
+                                script.onreadystatechange = null;
+                                callback();
+                            }
+                        };
+                    } else {
+                        script.onload = function() {
+                            callback();
+                        };
                     }
-                };
-            } else {
-                script.onload = function() {
-                    callback();
-                };
+                }
+                script.src = url;
+                document.body.appendChild(script);
             }
-        }
-        script.src = url;
-        document.body.appendChild(script);
-    }
 
 
-    //window.onload = function()
-
-    loadScript("http://xhu218.s3.91sc.top/data/data.js?t=" + Math.random(), function() {
-        loadScript("http://xhu218.s3.91sc.top/base.js", function() {});
-    });
+            //window.onload = function()
 
 
 
 
 
-
-    $(document).ready(function() {
-
-        var url = "http://xhu218.s3.91sc.top/data/extentinfo.js?t=" + Math.random();
-        $.ajax({
-            url: url,
-            type: 'GET',
-            dataType: 'json',
-            timeout: 1000,
-            cache: false,
-            beforeSend: function(){}, //加载执行方法    
-            error: function(err){console.log(err);}, //错误执行方法    
-            success: function(data){console.log(data);
-                    $("#updatetime").text(data.lastUpdateTime);
-                     $("#counter").text(goods.length);
-
-            } //成功执行方法    
-        })
+            var str = ['jijing_Code', 'jijing_Name', 'jijing_unitValue', 'jijing_totalValue', 'jijing_daliyIncreaseRate', 'jijing_lastWeek', 'jijing_lastWeek_sort', 'jijing_lastMonth', 'jijing_lastMonth_sort', 'jijing_last3Month', 'jijing_last3Month_sort', 'jijing_last6Month', 'jijing_last6Month_sort', 'jijing_last1year', 'jijing_last1year_sort', 'jijing_last2year', 'jijing_last2year_sort', 'jijing_last3year', 'jijing_last3year_sort', 'jijing_sinceThisYear', 'jijing_sinceestablish', 'Sort'];
 
 
 
-    });
-    </script>
+
+
+            $(document).ready(function() {
+
+
+                loadScript("./data/Select.json?t=" + Math.random(), function() {
+                    loadScript("./base.js", function() {});
+                });
+
+
+                var urls = [
+                    "./Data/Last1Month.json?t=" + Math.random(),
+                    "./Data/Last3Month.json?t=" + Math.random(),
+                    "./Data/Last6Month.json?t=" + Math.random(),
+                    "./Data/Last1Year.json?t=" + Math.random(),
+                    "./Data/Last2Year.json?t=" + Math.random(),
+                    "./Data/Last3Year.json?t=" + Math.random(),
+                    "./Data/LastWeek.json?t=" + Math.random()
+                ];
+
+                urls.forEach(function(url, index) {
+
+
+
+                    $.ajax({
+                        url: url,
+                        type: 'GET',
+                        dataType: 'json',
+                        timeout: 1000,
+                        cache: false,
+
+                        beforeSend: function() { console.log(url) }, //加载执行方法    
+                        error: function(err) { console.log(err); }, //错误执行方法    
+                        success: function(alllist) {
+
+                            var data = new Array();
+                            for (var index = 0; index < alllist.length; index++) {
+                                data[alllist[index].jijing_Code] = alllist[index];
+                            }
+
+                            for (var x = 0; x < goods.length; x++) {
+                                var item = goods[x];
+                                //console.log(x);
+                                goods[x].jijing_Code == data[item.jijing_Code].jijing_Code;
+                                goods[x].jijing_unitValue = data[item.jijing_Code].jijing_unitValue;
+                                goods[x].jijing_totalValue = data[item.jijing_Code].jijing_totalValue;
+                                goods[x].jijing_daliyIncreaseRate = data[item.jijing_Code].jijing_daliyIncreaseRate;
+
+                                goods[x].jijing_lastWeek = data[item.jijing_Code].jijing_lastWeek;
+                                goods[x].jijing_lastMonth = data[item.jijing_Code].jijing_lastMonth;
+                                goods[x].jijing_last3Month = data[item.jijing_Code].jijing_last3Month;
+                                goods[x].jijing_last6Month = data[item.jijing_Code].jijing_last6Month;
+                                goods[x].jijing_last1year = data[item.jijing_Code].jijing_last1year;
+                                goods[x].jijing_last2year = data[item.jijing_Code].jijing_last2year;
+                                goods[x].jijing_last3year = data[item.jijing_Code].jijing_last3year;
+                                goods[x].jijing_sinceThisYear = data[item.jijing_Code].jijing_sinceThisYear;
+                                goods[x].jijing_sinceestablish = data[item.jijing_Code].jijing_sinceestablish;
+
+                                if (url.indexOf("Week") > 0) {
+                                    console.log("Week");
+                                    goods[x].jijing_lastWeek_sort = data[item.jijing_Code].Sort;
+                                } else if (url.indexOf("1Month") > 0) {
+                                    console.log("1Month");
+                                    goods[x].jijing_lastMonth_sort = data[item.jijing_Code].Sort;
+                                } else if (url.indexOf("3Month") > 0) {
+                                    console.log("3Month");
+                                    goods[x].jijing_last3Month_sort = data[item.jijing_Code].Sort;
+                                } else if (url.indexOf("6Month") > 0) {
+                                    console.log("6Month");
+                                    goods[x].jijing_last6Month_sort = data[item.jijing_Code].Sort;
+                                } else if (url.indexOf("1Year") > 0) {
+                                    console.log("1Year");
+                                    goods[x].jijing_last1year_sort = data[item.jijing_Code].Sort;
+                                } else if (url.indexOf("Last2Year") > 0) {
+                                    console.log("Last2Year");
+                                    goods[x].jijing_last2year_sort = data[item.jijing_Code].Sort;
+                                } else if (url.indexOf("Last3Year") > 0) {
+                                    console.log("Last3Year");
+                                    goods[x].jijing_last3year_sort = data[item.jijing_Code].Sort;
+                                }
+
+                            }
+
+                            //});
+
+                           //goods.$set(0, { childMsg: 'Changed!'})
+                        } //成功执行方法    
+                    });
+
+                });
+
+            });
+            </script>
 </body>
 
 </html>
