--- a/MyCProgram/HTML/JQuery/miaosha/index.html
+++ b/MyCProgram/HTML/JQuery/miaosha/index.html
@@ -4,7 +4,6 @@
 <head>
     <title>超级秒杀</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
     <!--
          <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -13,22 +12,27 @@
 -->
     <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://apps.bdimg.com/libs/vue/1.0.14/vue.js"></script>
-    <link rel="stylesheet" href="http://xhu218.s3.91sc.top/base.css" type="text/css" />
     <!--
+    <link rel="stylesheet" href="http://xhu218.s3.91sc.top/base.css?v=201711151108" type="text/css" />
+-->
+    <!-- 
     <script src="data/data.js?t=1"></script>
     <script src="data/extentinfo.js?t=1"></script>
     <script src="jquery.min.js"></script>
     <script src="vue.js"></script>
-    <link rel="stylesheet" href="base.css" type="text/css" />   
+    
 
+
+    
 
 -->
+    <link rel="stylesheet" href="base.css" type="text/css" />
 </head>
 
 <body>
     <!-- component template -->
     <script type="text/x-template" id="grid-template">
-        <table style="clear: both;">
+        <table>
             <thead>
                 <tr id="header">
                     <th v-for="key in columns" @click="sortBy(key)" :class="{ active: sortKey == key }">
@@ -41,10 +45,10 @@
             <tbody>
                 <tr v-for="entry in filteredData">
                     <td v-for="key in columns">
-                        <div v-if="displayLink(key)" style="font-size: 20px"> <a :href="'http://91sc.top?email=web@web.com&url=https://item.jd.com/'+entry['wareId']+'.html'" target="_blank">{{entry['wname']}}</a> </div>
+                        <div v-if="displayLink(key)" style="font-size: 20px;"> <a :href="'http://91sc.top?email=web@web.com&url=https://item.jd.com/'+entry['wareId']+'.html'" target="_blank">{{entry['wname']}}</a> </div>
                         <div v-if="displayInDiv(key)" style="font-size: 20px">{{entry[key] }}</div>
                         <div v-if="displayForRemianTime(key)" style="font-size: 20px">{{(entry[key]/60/60).toFixed(0) }} 小时后</div>
-                        <div v-if="displayImage(key)" width="200px" height="200px"><img width="160px" height="160px" v-bind:src=entry[key] /></div>
+                        <div v-if="displayImage(key)" width="200px" height="200px"><a :href="'http://91sc.top?email=web@web.com&url=https://item.jd.com/'+entry['wareId']+'.html'" target="_blank"><img width="160px" height="160px" v-bind:src=entry[key] /></a> </div>
                     </td>
                 </tr>
             </tbody>
@@ -53,11 +57,11 @@
     <!-- demo root element -->
     <div id="demo">
         <form id="search">
-            <div style="float: right;font-size: 40px;font-weight: bold">
-                记录条数:&nbsp;&nbsp;
-                <span id="counter"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 更新时间:&nbsp;&nbsp;&nbsp;&nbsp;
-                <span id="updatetime"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <input name="query" v-model="searchQuery" width="200px" height="60px" style="font-size: 40px"> <b style="font-size: 40px">Search</b>
+            <br />
+            <div style="font-size: 40px;font-weight: bold">
+                记录条数:&nbsp;&nbsp;&nbsp;&nbsp;<span id="counter"></span> 更新时间:&nbsp;&nbsp;&nbsp;&nbsp;
+                <span id="updatetime"></span>&nbsp;&nbsp;&nbsp;&nbsp;
+                <input name="query" v-model="searchQuery" width="50px" height="60px" style="font-size: 40px"> <b style="font-size: 40px">Search</b>
             </div>
             <div style="clear:both" />
             <br />
@@ -93,7 +97,8 @@
     //window.onload = function()
 
     loadScript("http://xhu218.s3.91sc.top/data/data.js?t=" + Math.random(), function() {
-        loadScript("http://xhu218.s3.91sc.top/base.js", function() {});
+        loadScript("http://xhu218.s3.91sc.top/base.js?t=" + Math.random(), function() {});
+        //loadScript("base.js", function() {});
     });
 
 
@@ -110,11 +115,12 @@
             dataType: 'json',
             timeout: 1000,
             cache: false,
-            beforeSend: function(){}, //加载执行方法    
-            error: function(err){console.log(err);}, //错误执行方法    
-            success: function(data){console.log(data);
-                    $("#updatetime").text(data.lastUpdateTime);
-                     $("#counter").text(goods.length);
+            beforeSend: function() {}, //加载执行方法    
+            error: function(err) { console.log(err); }, //错误执行方法    
+            success: function(data) {
+                console.log(data);
+                $("#updatetime").text(data.lastUpdateTime);
+                $("#counter").text(goods.length);
 
             } //成功执行方法    
         })
