--- a/MyCProgram/HTML/JQuery/jijing/日期测试.html
+++ b/MyCProgram/HTML/JQuery/jijing/日期测试.html
@@ -8,7 +8,7 @@
 Date.prototype.Format = function(fmt) { //author: meizz   
     var o = {
         "M+": this.getMonth() + 1, //月份   
-        "d+": this.getDate() - 1, //日   
+        "d+": this.getDate()-1, //日   
         "H+": this.getHours(), //小时   
         "m+": this.getMinutes(), //分   
         "s+": this.getSeconds(), //秒   
@@ -21,22 +21,13 @@ Date.prototype.Format = function(fmt) { //author: meizz
     return fmt;
 }
 
-var time1 = new Date().Format("yyyy-MM-dd");
+var time1 = new Date().Format("yyyy-MM-dd");  
 var time2 = new Date().Format("yyyy-MM-dd HH:mm:ss");
 
 console.log(time1);
 
-//获取url中的参数
-function getUrlParam(name) {
-    var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)"); //构造一个含有目标参数的正则表达式对象
-    var r = window.location.search.substr(1).match(reg); //匹配目标参数
-    if (r != null) return unescape(r[2]);
-    return null; //返回参数值
-}
-
 $(document).ready(function() {
-    //console.log(new Date());
-    console.log(getUrlParam("user"));
+    console.log(new Date());
 })
 </script>
 
