--- a/MyCProgram/HTML/JQuery/jijing/index.html
+++ b/MyCProgram/HTML/JQuery/jijing/index.html
@@ -87,11 +87,11 @@
         </div>
         <!---
             please change the ref to server.
-            <script src="base.js?v=20171122"></script>
+            <script src="base.js?v=20171122">
           
         -->
-        </script>
-        <script src="http://xhu219.s3.91sc.top/base.js?v=20171128">
+  
+        <script src="http://xhu219.s3.91sc.top/base.js?v=201712011303"></script>
 </body>
 
 </html>
