--- a/MyCProgram/HTML/JQuery/jijing/vue-table-master/examples/bootstrap.html
+++ b/MyCProgram/HTML/JQuery/jijing/vue-table-master/examples/bootstrap.html
@@ -225,10 +225,11 @@
                 </div>
             </div>
         </div>
+        <!--http://91sc.top/user.json-->
         <!--http://vuetable.ratiw.net/api/users-->
         <div class="table-responsive">
             <vuetable v-ref:vuetable
-                api-url="http://91sc.top/user.json"
+                api-url="http://vuetable.ratiw.net/api/users"
                 pagination-path=""
                 :fields="fields"
                 :sort-order="sortOrder"
