--- a/MyCProgram/HTML/JQuery/格式处理/sample.html
+++ b/MyCProgram/HTML/JQuery/格式处理/sample.html
@@ -10,7 +10,7 @@
         console.log("start...");
         $("#info").append("<br/>0x00000080 是HD,还是SD :" + ET_VideoStandardGetHSClass("undefined") + 　"<br />");
         $("#info").append("0x00000080 是P还是I" + ETGetVideoStandardPI(0x00000080) + "<br />");
-        $("#info").append('0x00000080 的帧率是' + ETGetFrameRate(0x00000080) + "<br />");
+        $("#info").append('wfg 的帧率是' + ETGetFrameRate(1) + "<br />");
         console.log("end...");
 
     });
