--- a/MyCProgram/HTML/JQuery/jijing/all.html
+++ b/MyCProgram/HTML/JQuery/jijing/all.html
@@ -14,7 +14,7 @@
 
         $.ajax({
 
-            url: 'http://xhu219.s3.91sc.top/data/67438964@qq.com.json?t=' + Math.random(),
+            url: 'http://91sc.top/process/67438964@qq.com.json?t=' + Math.random(),
             type: 'GET', //GET
             async: true, //或false,是否异步 
             timeout: 10000, //超时时间
